# alertU

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_support.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/alertu-common/: Cargo.toml  README.md
crates/alertu-common/src/: config.rs  ipc_client.rs  lib.rs  protocol.rs  state.rs
crates/alertu-ctl/: Cargo.toml  README.md
crates/alertu-ctl/assets/: README.md
crates/alertu-ctl/src/: cli.rs  error.rs  main.rs  render.rs  sounds.rs
crates/alertu-ctl/src/commands/: config.rs  devices.rs  gen_sounds.rs  mod.rs  state.rs
crates/alertu-daemon/: Cargo.toml  README.md
crates/alertu-daemon/src/: devices.rs  hotplug.rs  input.rs  ipc.rs  lib.rs  machine.rs  main.rs  perms.rs  session.rs  snapshot.rs  sound.rs  transitions.rs  webhook.rs
crates/alertu-daemon/tests/: blackbox.rs  machine.rs
crates/alertu-gui/: Cargo.toml  README.md
crates/alertu-gui/src/: main.rs  tray.rs
crates/alertu-settings/: Cargo.toml  README.md
crates/alertu-settings/src/: client.rs  main.rs
docs/superpowers/: gensounds.py
docs/superpowers/plans/: 2026-07-21-lot-a-tooling-verification.md  2026-07-21-lot-b-usability.md  2026-07-21-lot-c-hardening.md  2026-07-22-debian-package.md  2026-07-22-rpm-package.md
docs/superpowers/specs/: 2026-07-21-tooling-usability-hardening-design.md  2026-07-22-debian-package-design.md  2026-07-22-rpm-package-design.md
packaging/: alertu-daemon.service  alertu-gui.service  alertu-settings.desktop  config.example.toml  stage.sh
packaging/deb/: README.Debian  changelog  postinst  postrm  stage.sh
packaging/rpm/: README.Fedora  post_install.sh  post_uninstall.sh  pre_uninstall.sh
packaging/sysusers.d/: alertu.conf
resources/: README.md
site/: config.toml
site/content/: _index.fr.md  _index.md
site/public/: index.html  main.css  robots.txt  sitemap.xml
site/public/fr/: index.html
site/sass/: main.scss
site/static/: reveal.js
site/templates/: base.html  index.html
