[workspace]
resolver = "2"
members = [
    "crates/alertu-common",
    "crates/alertu-daemon",
    "crates/alertu-gui",
    "crates/alertu-settings",
    "crates/alertu-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Systm D"]
repository = "https://github.com/systm-d/alertu"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "process", "signal"] }
directories = "5"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
