[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Systm D"]
repository = "https://github.com/systm-d/alertU"
homepage = "https://systm-d.github.io/alertU/"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "process", "signal"] }
directories = "5"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["tokio"] }

# `deny` rather than the more usual `forbid`: `alertu-daemon`'s `perms` module
# needs one `libc::getgrnam_r` call, and `forbid` cannot be lifted by an
# `#[allow]`. The four crates with no FFI keep their own crate-level
# `#![forbid(unsafe_code)]`, which is stronger than this and self-documenting.
[workspace.lints.rust]
unsafe_code = "deny"

# `clippy::all` is already clippy's default group, so this changes nothing
# today. It pins the rule in the repository instead of leaving it to whatever
# flags CI happens to pass.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true
