[package]
name = "alertu-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types (config, state, IPC protocol) for AlertU."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true

[features]
# The blocking socket client. Off by default so the daemon, which has its own
# async IPC server, does not compile a client it never uses.
ipc-client = []

[dev-dependencies]
tempfile.workspace = true
