[package]
name = "alertu-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared types (config, state, IPC protocol) for AlertU."
readme = "README.md"
documentation = "https://docs.rs/alertu-common"
keywords = ["alertu", "alarm", "security", "ipc", "linux"]
categories = ["os::linux-apis", "config"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true

[features]
# The blocking socket client. Off by default so the daemon, which has its own
# async IPC server, does not compile a client it never uses.
ipc-client = []

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
