[package]
name = "alertu-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "AlertU command-line control: arm, disarm, status, config and devices over the daemon socket."
readme = "README.md"
documentation = "https://docs.rs/alertu-ctl"
keywords = ["alertu", "alarm", "cli", "security", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]

[[bin]]
name = "alertu-ctl"
path = "src/main.rs"

[dependencies]
alertu-common = { path = "../alertu-common", version = "0.2.0", features = ["ipc-client"] }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
