[package]
name = "alertu-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "AlertU privileged daemon: evdev, state machine, session lock, audio, snapshots."
readme = "README.md"
documentation = "https://docs.rs/alertu-daemon"
keywords = ["alertu", "alarm", "evdev", "security", "daemon"]
categories = ["command-line-utilities", "os::linux-apis"]

[lib]
name = "alertu_daemon"
path = "src/lib.rs"

[[bin]]
name = "alertu-daemon"
path = "src/main.rs"

[dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
directories.workspace = true
evdev = { version = "0.13", features = ["tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
inotify = { version = "0.11", features = ["stream"] }
futures-util = { version = "0.3", default-features = false }
libc.workspace = true
zbus.workspace = true

[dev-dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0", features = ["ipc-client"] }
tempfile.workspace = true

[lints]
workspace = true
