[package]
name = "alertu-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Car-alarm-style intrusion guard for Linux desktops"
readme = "README.md"
documentation = "https://docs.rs/alertu-daemon"
keywords = ["alertu", "alarm", "evdev", "security", "daemon"]
categories = ["command-line-utilities", "os::linux-apis"]

[lib]
name = "alertu_daemon"
path = "src/lib.rs"

[[bin]]
name = "alertu-daemon"
path = "src/main.rs"

[dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
directories.workspace = true
evdev = { version = "0.13", features = ["tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
inotify = { version = "0.11", features = ["stream"] }
futures-util = { version = "0.3", default-features = false }
libc.workspace = true
zbus.workspace = true

[dev-dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0", features = ["ipc-client"] }
tempfile.workspace = true

[lints]
workspace = true

# Debian packaging. It lives in this crate's manifest because cargo-deb packages
# one crate, while AlertU's four binaries live in four — so this one manifest
# carries the whole project's packaging configuration, and `name` renames the
# result from "alertu-daemon" to "alertu". A wart, chosen over adding an empty
# metapackage crate purely for cosmetics.
#
# Paths are relative to this manifest's directory.
[package.metadata.deb]
name = "alertu"
maintainer = "Kevin Delfour <kevin@delfour.co>"
license-file = ["../../LICENSE", "0"]
# Policy 12.7 requires a changelog for a non-native package; without this
# lintian reports E: no-changelog.
changelog = "../../packaging/deb/changelog"
extended-description = """
A cheap USB or Bluetooth HID remote becomes the key fob for a Linux desktop.
Click to arm: the session locks. Activity on a watched input device then starts
a countdown, a siren, a timestamped webcam still and an optional webhook.
A personal gadget, not an anti-theft system."""
section = "utils"
priority = "optional"
depends = "$auto, systemd"
# fswebcam first: apt installs the leading alternative, and ffmpeg drags in
# GTK3, Mesa, SDL2 and some two hundred more packages to take one still.
# libgl1/libxkbcommon0 are dlopen'ed by winit and glutin, so `$auto` cannot see
# them and the GUI would otherwise declare no runtime dependencies at all.
recommends = "fswebcam | ffmpeg, pulseaudio-utils | alsa-utils, libgl1, libxkbcommon0"
assets = [
    ["../../target/release/alertu-daemon",   "usr/bin/",  "755"],
    ["../../target/release/alertu-ctl",      "usr/bin/",  "755"],
    ["../../target/release/alertu-gui",      "usr/bin/",  "755"],
    ["../../target/release/alertu-settings", "usr/bin/",  "755"],
    ["../../target/pkg-staging/user/alertu-gui.service", "usr/lib/systemd/user/", "644"],
    ["../../target/pkg-staging/sounds/*.wav", "usr/share/sounds/alertu/", "644"],
    ["../../packaging/sysusers.d/alertu.conf", "usr/lib/sysusers.d/", "644"],
    ["../../packaging/alertu-settings.desktop", "usr/share/applications/", "644"],
    ["../../packaging/icons/hicolor/48x48/apps/alertu.png",   "usr/share/icons/hicolor/48x48/apps/",   "644"],
    ["../../packaging/icons/hicolor/64x64/apps/alertu.png",   "usr/share/icons/hicolor/64x64/apps/",   "644"],
    ["../../packaging/icons/hicolor/128x128/apps/alertu.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["../../packaging/icons/hicolor/256x256/apps/alertu.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["../../packaging/icons/hicolor/512x512/apps/alertu.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["../../packaging/config.example.toml", "usr/share/doc/alertu/", "644"],
    ["../../packaging/deb/README.Debian",   "usr/share/doc/alertu/", "644"],
]
maintainer-scripts = "../../packaging/deb"

# `unit-name` is required: units are matched as `<unit>.<suffix>`, and our file
# is alertu-daemon.service while the package is alertu, so the default
# `<package>.<suffix>` pattern would match nothing.
#
# `unit-scripts` points at the system-only staging directory. cargo-deb handles
# system units only; the user unit is shipped through `assets` above and must
# never appear here.
[package.metadata.deb.systemd-units]
unit-name = "alertu-daemon"
unit-scripts = "../../target/pkg-staging/system"
enable = true
start = true
restart-after-upgrade = true
