[package]
name = "alertu-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Car-alarm-style intrusion guard for Linux desktops"
readme = "README.md"
documentation = "https://docs.rs/alertu-daemon"
keywords = ["alertu", "alarm", "evdev", "security", "daemon"]
categories = ["command-line-utilities", "os::linux-apis"]

[lib]
name = "alertu_daemon"
path = "src/lib.rs"

[[bin]]
name = "alertu-daemon"
path = "src/main.rs"

[dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
directories.workspace = true
evdev = { version = "0.13", features = ["tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
inotify = { version = "0.11", features = ["stream"] }
futures-util = { version = "0.3", default-features = false }
libc.workspace = true
zbus.workspace = true

[dev-dependencies]
alertu-common = { path = "../alertu-common", version = "0.1.0", features = ["ipc-client"] }
tempfile.workspace = true

[lints]
workspace = true

# Debian packaging. It lives in this crate's manifest because cargo-deb packages
# one crate, while AlertU's four binaries live in four — so this one manifest
# carries the whole project's packaging configuration, and `name` renames the
# result from "alertu-daemon" to "alertu". A wart, chosen over adding an empty
# metapackage crate purely for cosmetics.
#
# Paths are relative to this manifest's directory.
[package.metadata.deb]
name = "alertu"
maintainer = "Kevin Delfour <kevin@delfour.co>"
license-file = ["../../LICENSE", "0"]
# Policy 12.7 requires a changelog for a non-native package; without this
# lintian reports E: no-changelog.
changelog = "../../packaging/deb/changelog"
extended-description = """
A cheap USB or Bluetooth HID remote becomes the key fob for a Linux desktop.
Click to arm: the session locks. Activity on a watched input device then starts
a countdown, a siren, a timestamped webcam still and an optional webhook.
A personal gadget, not an anti-theft system."""
section = "utils"
priority = "optional"
depends = "$auto, systemd"
# fswebcam first: apt installs the leading alternative, and ffmpeg drags in
# GTK3, Mesa, SDL2 and some two hundred more packages to take one still.
# libgl1/libxkbcommon0 are dlopen'ed by winit and glutin, so `$auto` cannot see
# them and the GUI would otherwise declare no runtime dependencies at all.
recommends = "fswebcam | ffmpeg, pulseaudio-utils | alsa-utils, libgl1, libxkbcommon0"
assets = [
    ["../../target/release/alertu-daemon",   "usr/bin/",  "755"],
    ["../../target/release/alertu-ctl",      "usr/bin/",  "755"],
    ["../../target/release/alertu-gui",      "usr/bin/",  "755"],
    ["../../target/release/alertu-settings", "usr/bin/",  "755"],
    ["../../target/pkg-staging/user/alertu-gui.service", "usr/lib/systemd/user/", "644"],
    ["../../target/pkg-staging/sounds/*.wav", "usr/share/sounds/alertu/", "644"],
    ["../../packaging/sysusers.d/alertu.conf", "usr/lib/sysusers.d/", "644"],
    ["../../packaging/alertu-settings.desktop", "usr/share/applications/", "644"],
    ["../../packaging/icons/hicolor/48x48/apps/alertu.png",   "usr/share/icons/hicolor/48x48/apps/",   "644"],
    ["../../packaging/icons/hicolor/64x64/apps/alertu.png",   "usr/share/icons/hicolor/64x64/apps/",   "644"],
    ["../../packaging/icons/hicolor/128x128/apps/alertu.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["../../packaging/icons/hicolor/256x256/apps/alertu.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["../../packaging/icons/hicolor/512x512/apps/alertu.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["../../packaging/config.example.toml", "usr/share/doc/alertu/", "644"],
    ["../../packaging/deb/README.Debian",   "usr/share/doc/alertu/", "644"],
]
maintainer-scripts = "../../packaging/deb"

# `unit-name` is required: units are matched as `<unit>.<suffix>`, and our file
# is alertu-daemon.service while the package is alertu, so the default
# `<package>.<suffix>` pattern would match nothing.
#
# `unit-scripts` points at the system-only staging directory. cargo-deb handles
# system units only; the user unit is shipped through `assets` above and must
# never appear here.
[package.metadata.deb.systemd-units]
unit-name = "alertu-daemon"
unit-scripts = "../../target/pkg-staging/system"
enable = true
start = true
restart-after-upgrade = true

# --- Fedora RPM -------------------------------------------------------------
#
# Deliberately mirrors [package.metadata.deb] above: same binaries, same paths,
# same sounds, same icons. Keep the two lists in step; if you add a file to one,
# add it to the other.
[package.metadata.generate-rpm]
name = "alertu"
summary = "Car-alarm-style intrusion guard for Linux desktops"
license = "MIT"
post_install_script = "../../packaging/rpm/post_install.sh"
pre_uninstall_script = "../../packaging/rpm/pre_uninstall.sh"
post_uninstall_script = "../../packaging/rpm/post_uninstall.sh"
# Built and verified on Fedora 43. The effective floor is whatever glibc symbol
# versions --auto-req records, which is looser than a distribution version.
assets = [
    { source = "../../target/release/alertu-daemon",   dest = "/usr/bin/alertu-daemon",   mode = "755" },
    { source = "../../target/release/alertu-ctl",      dest = "/usr/bin/alertu-ctl",      mode = "755" },
    { source = "../../target/release/alertu-gui",      dest = "/usr/bin/alertu-gui",      mode = "755" },
    { source = "../../target/release/alertu-settings", dest = "/usr/bin/alertu-settings", mode = "755" },
    { source = "../../target/pkg-staging/system/alertu-daemon.service", dest = "/usr/lib/systemd/system/alertu-daemon.service", mode = "644" },
    { source = "../../target/pkg-staging/user/alertu-gui.service",      dest = "/usr/lib/systemd/user/alertu-gui.service",      mode = "644" },
    { source = "../../target/pkg-staging/sounds/*.wav", dest = "/usr/share/sounds/alertu/", mode = "644" },
    { source = "../../packaging/sysusers.d/alertu.conf", dest = "/usr/lib/sysusers.d/alertu.conf", mode = "644" },
    { source = "../../packaging/alertu-settings.desktop", dest = "/usr/share/applications/alertu-settings.desktop", mode = "644" },
    { source = "../../packaging/icons/hicolor/48x48/apps/alertu.png",   dest = "/usr/share/icons/hicolor/48x48/apps/alertu.png",   mode = "644" },
    { source = "../../packaging/icons/hicolor/64x64/apps/alertu.png",   dest = "/usr/share/icons/hicolor/64x64/apps/alertu.png",   mode = "644" },
    { source = "../../packaging/icons/hicolor/128x128/apps/alertu.png", dest = "/usr/share/icons/hicolor/128x128/apps/alertu.png", mode = "644" },
    { source = "../../packaging/icons/hicolor/256x256/apps/alertu.png", dest = "/usr/share/icons/hicolor/256x256/apps/alertu.png", mode = "644" },
    { source = "../../packaging/icons/hicolor/512x512/apps/alertu.png", dest = "/usr/share/icons/hicolor/512x512/apps/alertu.png", mode = "644" },
    { source = "../../packaging/config.example.toml", dest = "/usr/share/doc/alertu/config.example.toml", mode = "644", doc = true },
    { source = "../../packaging/rpm/README.Fedora",   dest = "/usr/share/doc/alertu/README.Fedora",      mode = "644", doc = true },
    { source = "../../LICENSE", dest = "/usr/share/licenses/alertu/LICENSE", mode = "644", doc = true },
]

# By file path, not by package name. /usr/bin/loginctl is provided by systemd;
# naming the path keeps the requirement about the capability rather than about
# one distribution's package layout.
[package.metadata.generate-rpm.requires]
"/usr/bin/loginctl" = "*"

# Weak dependencies: dnf installs them by default, the user may remove them,
# and an unresolvable one is silently ignored.
#
# The webcam entry is the important one. The daemon resolves its tool at
# runtime -- fswebcam if present, otherwise ffmpeg (snapshot.rs). On Fedora,
# /usr/bin/ffmpeg comes from ffmpeg-free in the Fedora repositories, while the
# package literally named `ffmpeg` lives in RPM Fusion. Requiring the name
# would force users onto a third-party repository; requiring the path does not.
#
# mesa-libGL and libxkbcommon are dlopen'ed by winit and glutin, so --auto-req
# cannot see them and the GUI would otherwise declare no runtime dependency.
[package.metadata.generate-rpm.recommends]
fswebcam = "*"
"/usr/bin/ffmpeg" = "*"
"/usr/bin/paplay" = "*"
mesa-libGL = "*"
libxkbcommon = "*"
